# rust-study

./: .gitignore  Cargo.toml  README.md
doc_ex/guessing_game/src/: main.rs
doc_ex/hello_web/: 404.html
doc_ex/hello_web/src/: lib.rs  main.rs
doc_ex/minigrep/src/: lib.rs
doc_ex/mod-test/: Cargo.toml
doc_ex/mod-test/src/: main.rs
doc_ex/mod-test/src/main_mod/: suba.rs
doc_ex/mod-test/subc/: Cargo.toml
doc_ex/mod-test/subc/src/: lib.rs
doc_ex/renew_blog/: Cargo.toml
doc_ex/renew_blog/src/: main.rs
easy_rust/: Cargo.toml  readme.md
easy_rust/src/: main.rs
first_curi/: Cargo.toml  readme.md
first_curi/src/: 08_types.rs  09_type_Interface.rs  11_display_and_debug.rs  12_mutability.rs  13_stack_heap_pointer.rs
minigrep/src/: lib.rs  main.rs
mod-test/src/: aggregator.rs  main.rs
mod-test/src/main_mod/: mod.rs  subb.rs
rust_book/actix-gcd/src/: main.rs
rust_book/mandelbrot/src/: main.rs
rust_book/quickreplace/src/: main.rs
std_prac/: Cargo.toml
std_prac/src/: main.rs
term-ctl/: Cargo.toml
term-ctl/src/: main.rs
